@@ -742,6 +742,8 @@ NSEL specific formats
 .br
 \fB%xevt\fR     NSEL extended event
 .br
+\fB%sgt\fR      NSEL Source security group tag
+.br
 \fB%msec\fR     NSEL event time in msec
 .br
 \fB%iacl\fR     NSEL ingress ACL
