@@ -1,3 +1,6 @@
+2020-02-16
+- Add Source security group tag (SGT 34000) issue #192
+
 2020-02-09
 - Cleanup unused nffile records. Add nffileV2.h
 
